Bug 61571 - Fix worldID and destinationDomain argument names
Summary: Fix worldID and destinationDomain argument names
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Page Loading (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mihai Parparita
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-26 15:29 PDT by Mihai Parparita
Modified: 2011-05-26 22:30 PDT (History)
2 users (show)

See Also:


Attachments
Patch (13.97 KB, patch)
2011-05-26 15:41 PDT, Mihai Parparita
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mihai Parparita 2011-05-26 15:29:41 PDT
Fix worldID and destinationDomain argument names
Comment 1 Mihai Parparita 2011-05-26 15:41:43 PDT
Created attachment 95060 [details]
Patch
Comment 2 WebKit Commit Bot 2011-05-26 22:28:32 PDT
The commit-queue encountered the following flaky tests while processing attachment 95060 [details]:

http/tests/media/media-can-load-when-hidden.html bug 61341 (author: hausmann@webkit.org)
The commit-queue is continuing to process your patch.
Comment 3 WebKit Commit Bot 2011-05-26 22:29:57 PDT
Comment on attachment 95060 [details]
Patch

Clearing flags on attachment: 95060

Committed r87469: <http://trac.webkit.org/changeset/87469>
Comment 4 WebKit Commit Bot 2011-05-26 22:30:01 PDT
All reviewed patches have been landed.  Closing bug.