2011-05-26  Mihai Parparita  <mihaip@chromium.org>

Reviewed by Adam Barth.

        Fix worldID and destinationDomain argument names
        https://bugs.webkit.org/show_bug.cgi?id=61571

        As part of working on r87423, I noticed a couple of inconsistencies in
        argument names:
        - We would use worldId in .h files but worldID in .cpp files.
          Standardize on the latter
        - SecurityOrigin::addOriginAccessWhitelistEntry would take a
          destinationDomains argument, even though the actual parameter was for
          a single domain (renamed to be singular).

        * bindings/v8/ScriptController.h:
        * bindings/v8/V8Proxy.h:
        * page/SecurityOrigin.cpp:
        (WebCore::SecurityOrigin::addOriginAccessWhitelistEntry):
        (WebCore::SecurityOrigin::removeOriginAccessWhitelistEntry):
        * page/SecurityOrigin.h:
2011-05-26  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Adam Barth.

        Fix worldID and destinationDomain argument names
        https://bugs.webkit.org/show_bug.cgi?id=61571

        As part of working on r87423, I noticed a couple of inconsistencies in
        argument names:
        - We would use worldId in .h files but worldID in .cpp files.
          Standardize on the latter
        - SecurityOrigin::addOriginAccessWhitelistEntry would take a
          destinationDomains argument, even though the actual parameter was for
          a single domain (renamed to be singular).

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::executeScriptInIsolatedWorld):
        (WebKit::WebFrameImpl::setIsolatedWorldSecurityOrigin):
        * src/WebFrameImpl.h:
2011-05-26  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Adam Barth.

        Fix worldID and destinationDomain argument names
        https://bugs.webkit.org/show_bug.cgi?id=61571

        As part of working on r87423, I noticed a couple of inconsistencies in
        argument names:
        - We would use worldId in .h files but worldID in .cpp files.
          Standardize on the latter
        - SecurityOrigin::addOriginAccessWhitelistEntry would take a
          destinationDomains argument, even though the actual parameter was for
          a single domain (renamed to be singular).

        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        (LayoutTestController::evaluateScriptInIsolatedWorld):

Canonical link: https://commits.webkit.org/77012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87469 268f45cc-cd09-0410-ab3c-d52691b4dbfc