Source/WebKit/chromium/src/WebFrameImpl.h
@@ -102,9 +102,9 @@ public:
     virtual void bindToWindowObject(const WebString& name, NPObject*);
     virtual void executeScript(const WebScriptSource&);
     virtual void executeScriptInIsolatedWorld(
-        int worldId, const WebScriptSource* sources, unsigned numSources,
+        int worldID, const WebScriptSource* sources, unsigned numSources,
         int extensionGroup);
-    virtual void setIsolatedWorldSecurityOrigin(int worldId, const WebSecurityOrigin&);
+    virtual void setIsolatedWorldSecurityOrigin(int worldID, const WebSecurityOrigin&);
     virtual void addMessageToConsole(const WebConsoleMessage&);
     virtual void collectGarbage();
 #if WEBKIT_USING_V8
